set(VULKAN_VIDEO_DEC_SOURCES
    Main.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/Shell.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/ShellDirect.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/Shell.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/Helpers.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/HelpersDispatchTable.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/HelpersDispatchTable.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanDeviceContext.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanDeviceContext.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanShaderCompiler.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanShaderCompiler.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanDeviceMemoryImpl.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanDeviceMemoryImpl.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VkBufferResource.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VkBufferResource.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VkImageResource.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VkImageResource.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanDescriptorSetLayout.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanDescriptorSetLayout.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanCommandBuffersSet.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanCommandBuffersSet.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanFrame.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanFrame.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/pattern.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/pattern.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanVideoUtils.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanVideoUtils.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanSamplerYcbcrConversion.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VulkanSamplerYcbcrConversion.h
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/nvVkFormats.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VkVideoFrameToFile.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/crcgenerator.cpp
    ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}/VkDecoderUtils/VideoStreamDemuxer.cpp
    ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}/VkDecoderUtils/VideoStreamDemuxer.h
    ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}/VkDecoderUtils/ElementaryStream.cpp
    )

# Conditionally include FFmpegDemuxer.cpp
if(FFMPEG_AVAILABLE)
    list(APPEND VULKAN_VIDEO_DEC_SOURCES ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}/VkDecoderUtils/FFmpegDemuxer.cpp)
endif()

set(VULKAN_VIDEO_DEC_DEFINITIONS
    PRIVATE -DVK_NO_PROTOTYPES
    PRIVATE -DGLM_FORCE_RADIANS
    PRIVATE -DVIDEO_DISPLAY_QUEUE_SUPPORT)

# Conditionally include FFMPEG_DEMUXER_SUPPORT
if(FFMPEG_AVAILABLE)
    list(APPEND VULKAN_VIDEO_DEC_DEFINITIONS PRIVATE -DFFMPEG_DEMUXER_SUPPORT)
endif()

set(VULKAN_VIDEO_DEC_INCLUDES
    PRIVATE ${VK_VIDEO_DECODER_LIBS_INCLUDE_ROOT}
    PRIVATE ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}
    PRIVATE ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}
    PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
    PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../../)

set(VULKAN_VIDEO_DEC_LIBRARIES PRIVATE ${CMAKE_THREAD_LIBS_INIT})

link_directories(
    ${VULKAN_VIDEO_DEVICE_LIBS_PATH}
    ${VULKAN_VIDEO_DECODER_LIB_PATH}
    ${LIBVKVIDEODECODER_BINARY_ROOT}
    ${VULKAN_LIB_DIR}
    )

if(WIN32)
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PUBLIC ${AVCODEC_LIB} ${AVFORMAT_LIB} ${AVUTIL_LIB})
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PUBLIC ${VULKAN_VIDEO_PARSER_LIB})
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PUBLIC ${SHADERC_SHARED_LIBRARY})
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PUBLIC ${VULKAN_VIDEO_DECODER_LIB})
else()
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE ${SHADERC_SHARED_LIBRARY})
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE -L${CMAKE_INSTALL_LIBDIR} -l${VULKAN_VIDEO_DECODER_LIB})
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE -L${LIBVKVIDEODECODER_BINARY_ROOT} -l${VULKAN_VIDEO_DECODER_LIB})
endif()

######## TODO make FFMPEG libraries and demuxer optional. ###################

if(FFMPEG_AVAILABLE)
    if(WIN32)
        list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE ${VULKAN_VIDEO_PARSER_LIB} ${AVCODEC_LIB} ${AVFORMAT_LIB} ${AVUTIL_LIB})
    else()
        list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE -lavcodec -lavutil -lavformat)
        list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE -L${CMAKE_INSTALL_LIBDIR} -l${VULKAN_VIDEO_PARSER_LIB})
        list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE -L${LIBNVPARSER_BINARY_ROOT} -l${VULKAN_VIDEO_PARSER_LIB})
    endif()
endif()
######## END of TODO make FFMPEG linbraries and demuxer optional. ###################

if(TARGET vulkan)
    list(APPEND VULKAN_VIDEO_DEC_DEFINITIONS PRIVATE -DUNINSTALLED_LOADER="$<TARGET_FILE:vulkan>")
endif()

if(WIN32)
    list(APPEND VULKAN_VIDEO_DEC_DEFINITIONS PRIVATE -DVK_USE_PLATFORM_WIN32_KHR)
    list(APPEND VULKAN_VIDEO_DEC_DEFINITIONS PRIVATE -DWIN32_LEAN_AND_MEAN)

    list(APPEND VULKAN_VIDEO_DEC_SOURCES ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/ShellWin32.cpp ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/ShellWin32.h)
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE -ldl -lrt -lpthread)
    if(BUILD_WSI_XCB_SUPPORT AND DEMOS_WSI_SELECTION STREQUAL "XCB")
        find_package(XCB REQUIRED)

        list(APPEND VULKAN_VIDEO_DEC_SOURCES ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/ShellXcb.cpp ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/ShellXcb.h)
        list(APPEND VULKAN_VIDEO_DEC_DEFINITIONS PRIVATE -DVK_USE_PLATFORM_XCB_KHR)
        list(APPEND VULKAN_VIDEO_DEC_INCLUDES PRIVATE ${XCB_INCLUDES})
        list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE ${XCB_LIBRARIES})
    elseif(BUILD_WSI_WAYLAND_SUPPORT AND DEMOS_WSI_SELECTION STREQUAL "WAYLAND")
        find_package(Wayland REQUIRED)

        list(APPEND VULKAN_VIDEO_DEC_SOURCES ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/ShellWayland.cpp ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkShell/ShellWayland.h)
        list(APPEND VULKAN_VIDEO_DEC_DEFINITIONS PRIVATE -DVK_USE_PLATFORM_WAYLAND_KHR)
        list(APPEND VULKAN_VIDEO_DEC_INCLUDES PRIVATE ${WAYLAND_CLIENT_INCLUDE_DIR})
        list(APPEND VULKAN_VIDEO_DEC_LIBRARIES PRIVATE ${WAYLAND_CLIENT_LIBRARIES})
    endif()
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..)

project (vulkan-video-dec-test)
add_executable(vulkan-video-dec-test ${VULKAN_VIDEO_DEC_SOURCES})
target_compile_definitions(vulkan-video-dec-test ${VULKAN_VIDEO_DEC_DEFINITIONS})
target_include_directories(vulkan-video-dec-test ${VULKAN_VIDEO_DEC_INCLUDES})
target_link_libraries(vulkan-video-dec-test PUBLIC ${VULKAN_VIDEO_DEC_LIBRARIES})
add_dependencies(vulkan-video-dec-test GenerateDispatchTables ${VULKAN_VIDEO_PARSER_LIB} ${VULKAN_VIDEO_DECODER_LIB} ${SHADERC_LIB})

install(TARGETS vulkan-video-dec-test RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
