set(VULKAN_VIDEO_SIMPLE_DEC_SOURCES
    Main.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/VkVideoFrameToFile.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/nvVkFormats.cpp
    ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}/VkCodecUtils/crcgenerator.cpp
    ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}/VkDecoderUtils/VideoStreamDemuxer.cpp
    ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}/VkDecoderUtils/VideoStreamDemuxer.h
    ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}/VkDecoderUtils/ElementaryStream.cpp
    )

set(VULKAN_VIDEO_SIMPLE_DEC_DEFINITIONS
    PRIVATE -DVK_NO_PROTOTYPES
    PRIVATE -DGLM_FORCE_RADIANS)

set(VULKAN_VIDEO_SIMPLE_DEC_INCLUDES
    PRIVATE ${VK_VIDEO_DECODER_LIBS_INCLUDE_ROOT}
    PRIVATE ${VK_VIDEO_DECODER_LIBS_SOURCE_ROOT}
    PRIVATE ${VK_VIDEO_COMMON_LIBS_SOURCE_ROOT}
    PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
    PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../../)

set(VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES PRIVATE ${CMAKE_THREAD_LIBS_INIT})

link_directories(
    ${VULKAN_VIDEO_DEVICE_LIBS_PATH}
    ${VULKAN_VIDEO_DECODER_LIB_PATH}
    ${LIBVKVIDEODECODER_BINARY_ROOT}
    ${VULKAN_LIB_DIR}
    )

if(WIN32)
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES PUBLIC ${SHADERC_SHARED_LIBRARY})
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES PUBLIC ${VULKAN_VIDEO_DECODER_LIB})
else()
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES PRIVATE ${SHADERC_SHARED_LIBRARY})
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES PRIVATE -L${CMAKE_INSTALL_LIBDIR} -l${VULKAN_VIDEO_DECODER_LIB})
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES PRIVATE -L${LIBVKVIDEODECODER_BINARY_ROOT} -l${VULKAN_VIDEO_DECODER_LIB})
endif()

if(TARGET vulkan)
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_DEFINITIONS PRIVATE -DUNINSTALLED_LOADER="$<TARGET_FILE:vulkan>")
endif()

if(WIN32)
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_DEFINITIONS PRIVATE -DVK_USE_PLATFORM_WIN32_KHR)
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_DEFINITIONS PRIVATE -DWIN32_LEAN_AND_MEAN)

elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    list(APPEND VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES PRIVATE -ldl -lrt -lpthread)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..)

project (vulkan-video-dec-simple-test)
add_executable(vulkan-video-dec-simple-test ${VULKAN_VIDEO_SIMPLE_DEC_SOURCES})
target_compile_definitions(vulkan-video-dec-simple-test ${VULKAN_VIDEO_SIMPLE_DEC_DEFINITIONS})
target_include_directories(vulkan-video-dec-simple-test ${VULKAN_VIDEO_SIMPLE_DEC_INCLUDES})
target_link_libraries(vulkan-video-dec-simple-test PUBLIC ${VULKAN_VIDEO_SIMPLE_DEC_LIBRARIES})
add_dependencies(vulkan-video-dec-simple-test GenerateDispatchTables ${VULKAN_VIDEO_PARSER_LIB} ${VULKAN_VIDEO_DECODER_LIB} ${SHADERC_LIB})

install(TARGETS vulkan-video-dec-simple-test RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
